--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
         #response-table th {
             background-color: #f2f2f2;
         }
+
+        #switch-camera-btn {
+            display: block;
+            margin-top: 10px;
+            padding: 8px;
+            background-color: #007BFF;
+            color: #fff;
+            text-align: center;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -58,6 +68,7 @@
         <h1 style="text-align: center;">QR Code Scanner</h1>
         <video id="qr-video" playsinline></video>
         <div id="qr-result"></div>
+        <button id="switch-camera-btn" onclick="switchCamera()">Switch Camera</button>
         <table id="response-table"></table>
     </div>
 
@@ -67,31 +78,49 @@
             const video = document.getElementById("qr-video");
             const resultElement = document.getElementById("qr-result");
             const tableElement = document.getElementById("response-table");
+            const switchCameraBtn = document.getElementById("switch-camera-btn");
 
-            const scanner = new Instascan.Scanner({ video });
+            let scanner;
+            let currentCameraIndex = 0;
 
-            Instascan.Camera.getCameras()
-                .then((cameras) => {
-                    if (cameras.length > 0) {
-                        scanner.start(cameras[0]);
-                    } else {
-                        console.error("No cameras found.");
-                    }
-                })
-                .catch((error) => console.error("Error accessing cameras:", error));
+            function startScanner(cameraIndex) {
+                if (scanner) {
+                    scanner.stop();
+                }
 
-            scanner.addListener("scan", (content) => {
+                scanner = new Instascan.Scanner({ video, mirror: false, facingMode: { exact: cameraIndex === 1 ? "user" : "environment" } });
+                scanner.addListener("scan", handleScan);
+
+                Instascan.Camera.getCameras()
+                    .then((cameras) => {
+                        if (cameras.length > 1) {
+                            switchCameraBtn.style.display = "block";
+                        } else {
+                            switchCameraBtn.style.display = "none";
+                        }
+
+                        if (cameraIndex < cameras.length) {
+                            currentCameraIndex = cameraIndex;
+                            scanner.start(cameras[cameraIndex]);
+                        } else {
+                            console.error("Selected camera index is out of bounds.");
+                        }
+                    })
+                    .catch((error) => console.error("Error accessing cameras:", error));
+            }
+
+            function handleScan(content) {
                 resultElement.innerHTML = `<p>QR Code detected:</p><p>${content}</p>`;
 
                 // Perform the POST request with the scanned QR code data
-                postData("https://3a-api-dev.ainosi.id/v1/services/pwa/api/v1/ticket/validate", { qr_code: content })
+                postData("https://private-anon-6813788ec7-pwabackendagathis.apiary-mock.com/v1/services/pwa/api/v1/ticket/validate", { qr_code: content })
                     .then((response) => {
                         renderTable(response.message);
                     })
                     .catch((error) => {
                         renderTable(`Error: ${error.message}`);
                     });
-            });
+            }
 
             function postData(url, data) {
                 return fetch(url, {
@@ -118,6 +147,13 @@
                 td.textContent = message;
                 dataRow.appendChild(td);
             }
+
+            function switchCamera() {
+                currentCameraIndex = (currentCameraIndex + 1) % 2; // Toggle between 0 and 1
+                startScanner(currentCameraIndex);
+            }
+
+            startScanner(0);
         });
     </script>
 </body>
