--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             position: relative;
             width: 100%;
             max-width: 600px;
+            max-height:30%;
         }
 
         #qr-video {
