--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         #qr-video {
             width: 100%;
             max-height:30%;
+            height:300px;
             border: 1px solid #ddd;
         }
 
