--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
 </head>
 <body>
     <div id="video-container">
+        <div style="text-align: center; margin-bottom: 20px;">
+            <img src="https://3a-cms-dev.ainosi.id/storage/pwa/kkAqF179QX9d2F8vLMVXpusrwa98lrjwPQjsVQR6.png" alt="Logo" style="max-width: 30%; height: auto;">
+        </div>
         <h1 style="text-align: center;">QR Code Scanner</h1>
         <video id="qr-video" playsinline></video>
         <div id="qr-result"></div>
