--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 0;
             display: flex;
-            align-items: center;
+            align-items: top;
             justify-content: center;
             height: 100vh;
         }
