--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             max-height:50%;
             height:500px;
             border: 1px solid #ddd;
+            transform: scaleX(-1);
         }
 
         #qr-result {
