--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QR Code Scanner</title>
+    <title>Voucher Validator</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -70,7 +70,7 @@
         <div style="text-align: center; margin-bottom: 20px;">
             <img src="https://3a-cms-dev.ainosi.id/storage/pwa/kkAqF179QX9d2F8vLMVXpusrwa98lrjwPQjsVQR6.png" alt="Logo" style="max-width: 30%; height: auto;">
         </div>
-        <h1 style="text-align: center;">QR Code Scanner</h1>
+        <h1 style="text-align: center;">Voucher Validator</h1>
         <video id="qr-video" playsinline></video>
         <div id="qr-result"></div>
         <div id="qr-result2"></div>
